# comet-terminal

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: comet.desktop
crates/comet/: Cargo.toml
crates/comet-config/: Cargo.toml
crates/comet-config/src/: lib.rs
crates/comet-core/: Cargo.toml
crates/comet-core/src/: cell.rs  color.rs  cursor.rs  grid.rs  lib.rs  scrollback.rs  selection.rs  terminal.rs
crates/comet-pty/: Cargo.toml
crates/comet-pty/src/: error.rs  io.rs  lib.rs  parser.rs  process.rs  pty.rs  resize.rs  terminal.rs
crates/comet-renderer/: Cargo.toml
crates/comet-renderer-demo/: Cargo.toml
crates/comet-renderer-demo/src/: main.rs
crates/comet-renderer/benches/: render_bench.rs
crates/comet-renderer/src/: atlas.rs  colors.rs  cursor.rs  damage.rs  diagnostics.rs  error.rs  font.rs  glyph_cache.rs  lib.rs  metrics.rs  renderer.rs
crates/comet-renderer/src/backend/: cpu.rs  mod.rs  wgpu.rs
crates/comet-ui/: Cargo.toml
crates/comet-ui/src/: app.rs  input.rs  lib.rs  manager.rs  session.rs  workspace.rs
crates/comet/src/: icon.rs  main.rs
src/: app.rs  config.rs  event.rs  input.rs  main.rs  tab.rs
src/renderer/: glyph.rs  mod.rs  shader.wgsl  tab_bar.rs
themes/: mochi-galaxy.toml
