[package]
name = "comet-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
comet-core = { path = "../comet-core" }
wgpu = "23"
wgpu-types = "23"
bytemuck = "1"
thiserror = "1"
parking_lot = "0.12"
smallvec = "1"
euclid = "0.22"
hashbrown = "0.14"
cosmic-text = { version = "0.10", features = ["swash"] }
swash = "0.2"
fontdb = "0.23"
raw-window-handle = "0.6"
pollster = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "render_bench"
harness = false
